# cf-worker-vk-telegram-bridge

./: .dev.vars  Cargo.toml  README.md  setup-telegram-webhook.py  wrangler.toml
src/: anyhow_result.rs  lib.rs  vk_side.rs
