[package]
name = "cf-worker-vk-telegram-bridge"
version = "0.1.0"
edition = "2021"
authors = [ "Danya Generalov <danya@danya02.ru>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2", features=['http', 'axum'] }
worker-macros = { version="0.4.2", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["json", "macros"] }
axum-macros = { version = "0.3.0-rc.3" }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
anyhow = "1.0.93"
serde = { version = "1.0.214", features = ["derive"] }
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features=['time', 'json'] }
time = { version = "0.3", features=['wasm-bindgen'] }
reqwest = "0.12.9"
